k8s/istio/ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingressgateway
spec:
  type: NodePort
  selector:
    app: ingressgateway
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
