k8s/istio/kuboard-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kuboard-gateway
  namespace: kuboard
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kuboard
  namespace: kuboard
spec:
  hosts:
  - "kuboard.local.com"
  gateways:
  - kuboard-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kuboard-v3
        port:
          number: 80
